<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Project Description -->
  <groupId>org.ginsim</groupId>
  <artifactId>GINsim</artifactId>
  <name>GINsim</name>
  <version>3.0.0b-SNAPSHOT</version>
  <description>Edition, simulation and analysis of logical models</description>
  <inceptionYear>2005</inceptionYear>
  <packaging>jar</packaging>
  <url>http://www.ginsim.org</url>

  <properties>
    <project.java.version>1.8</project.java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <repositories>
    <!-- BIBsonomy: a maintained bibtex parser  -->
    <repository>
       <id>bibsonomy</id>
       <snapshots><enabled>false</enabled></snapshots>
       <releases><enabled>true</enabled></releases>
       <name>bibsonomy parser</name>
       <url>https://dev.bibsonomy.org/maven2</url>
    </repository>
  </repositories>


  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.2.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.kohsuke.metainf-services</groupId>
      <artifactId>metainf-services</artifactId>
      <version>1.8</version>
      <!-- only needed to compile: this allows to exclude it from copy-dependencies goal -->
      <scope>provided</scope>  
    </dependency>


    <!-- core GINsim dependencies -->
    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-core</artifactId>
      <version>1.2.0</version>
    </dependency>

    <dependency>
      <groupId>net.sf.py4j</groupId>
      <artifactId>py4j</artifactId>
      <version>0.10.9.5</version>
    </dependency>

    <dependency>
      <groupId>org.python</groupId>
      <artifactId>jython-standalone</artifactId>
      <version>2.7.2</version>
      <scope>provided</scope>  
    </dependency>

    <dependency>
      <groupId>org.colomoto</groupId>
      <artifactId>bioLQM</artifactId>
      <version>0.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.bibsonomy</groupId>
      <artifactId>bibsonomy-bibtex-parser</artifactId>
      <version>2.0.48</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.6.1</version>
    </dependency>

    <dependency>
      <groupId>org.ejml</groupId>
      <artifactId>ejml-simple</artifactId>
      <version>0.41</version>
    </dependency>

    <dependency>
        <groupId>org.knowm.xchart</groupId>
        <artifactId>xchart</artifactId>
        <version>3.8.1</version>
    </dependency>

  </dependencies>


  <build>
    <sourceDirectory>src/main</sourceDirectory>
    <testSourceDirectory>src/test</testSourceDirectory>
    <plugins>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
            <archive>
                <manifest>
                    <mainClass>org.ginsim.Launcher</mainClass>
                </manifest>
            </archive>
            <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
        </configuration>
      </plugin>

<!-- TODO: Shade plugin: merge deps into the main jar (during package), concatenate service discovery files -->
<!-- 
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
             <phase>assembly</phase> 
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
                   <mainClass>org.ginsim.Launcher</mainClass> 
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
-->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
           <source>1.8</source>
           <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <includeScope>runtime</includeScope>
              <excludeScope>provided</excludeScope>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>lib/</classpathPrefix>
              <useUniqueVersions>false</useUniqueVersions>
              <mainClass>org.ginsim.Launcher</mainClass>
            </manifest>
          </archive>
        </configuration>
       </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <docletPath>
            ${project.basedir}/lib/bibsonomy-bibtex-parser-2.0.48.jar,
            ${project.basedir}/lib/bibsonomy-common-2.0.48.jar,
            ${project.basedir}/lib/bibsonomy-model-2.0.48.jar
          </docletPath>
          <excludePackageNames>java.org.*</excludePackageNames>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <forkCount>1</forkCount>
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>1.2.0</version>
          </dependency>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.2.0</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>xml-maven-plugin</artifactId>
        <version>1.0</version>
        <executions>
          <execution>
            <goals>
              <goal>transform</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <transformationSets>
            <transformationSet>
              <dir>src/main/resources</dir>
              <includes><include>GINsim-about.rdf</include></includes>
              <outputDir>${project.build.directory}/classes/</outputDir>
              <stylesheet>src/main/resources/doapversionchange.xsl</stylesheet>
              <parameters>
                <parameter>
                  <name>GINsim.version</name>
                  <value>${project.version}</value>
                </parameter>
              </parameters>
            </transformationSet>
          </transformationSets>
        </configuration>
      </plugin>



    </plugins>
  </build>

  <!--
   deploy to a local repository using:
     mvn deploy -Dlocal.repository.url=file:///path/to/your/repository -DperformRelease
  -->
  <distributionManagement>
    <repository>
      <id>local.repository</id>
      <url>${local.repository.url}</url>
    </repository>
  </distributionManagement>

</project>
